--- a/css/Mi_Web.css
+++ b/css/Mi_Web.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url("C:/Users/alexm/OneDrive/Documents/Miweb/Iconos_redes/saturno.png");
+    background-image: url("Iconos_redes/saturno.png");
     background-size:contain;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -19,6 +19,7 @@ header {
     text-align: center;
     font-size:smaller;
     font-family:cursive;
+    position: relative;
 }
 /* Estilos para el logo */
 .logo{
